added rewards association table between gacha and item
