# backend-api/db.js
@@ -21,6 +21,7 @@ db.gachas = require("./models/gacha.model.js")(sequelize,Sequelize)
 db.users = require("./models/user.model.js")(sequelize,Sequelize)
 db.items = require("./models/item.model.js")(sequelize,Sequelize)
 db.ownerships = require("./models/ownership.model.js")(sequelize,Sequelize, db.users, db.items)
+db.rewards = require("./models/reward.model.js")(sequelize,Sequelize, db.gachas, db.items)
 
 async function Sync(){
     await sequelize.sync({alter:true}) //alter existing table
